[SNAP-1602](snap-virtual-file-system): Code and comments cleanup for clearing the warnings and errors.