@@ -17,6 +17,9 @@ import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
 import java.util.List;
@@ -30,10 +33,10 @@ import java.util.logging.Logger;
  */
 class S3Walker extends AbstractRemoteWalker {
 
-    private String address;
-    private String bucket;
-    private String delimiter;
-    private String root;
+    private final String address;
+    private final String bucket;
+    private final String delimiter;
+    private final String root;
 
     /**
      * Creates the new walker for S3  VFS
@@ -59,16 +62,15 @@ class S3Walker extends AbstractRemoteWalker {
      * @param params The request parameters builder
      * @param name   The name of new request parameter
      * @param value  The value of new request parameter
-     * @throws IOException If an I/O error occurs
      */
-    private static void addParam(StringBuilder params, String name, String value) throws IOException {
+    private static void addParam(StringBuilder params, String name, String value) {
         if (value == null || value.isEmpty()) {
             return;
         }
-        if (params.length() > 0) {
+        if (!params.isEmpty()) {
             params.append("&");
         }
-        params.append(name).append("=").append(URLEncoder.encode(value, "UTF8").replaceAll("\\+", "%20"));
+        params.append(name).append("=").append(URLEncoder.encode(value, StandardCharsets.UTF_8).replaceAll("\\+", "%20"));
     }
 
     /**
@@ -90,7 +92,12 @@ class S3Walker extends AbstractRemoteWalker {
         do {
             handler = new S3ResponseHandler(this.root + this.delimiter + s3Prefix, items, this.delimiter);
             String s3URL = buildS3URL(s3Prefix, nextContinuationToken);
-            URL url = new URL(s3URL);
+            final URL url;
+            try {
+                url = new URI(s3URL).toURL();
+            } catch (URISyntaxException e) {
+                throw new IOException(e);
+            }
             HttpURLConnection connection = this.remoteConnectionBuilder.buildConnection(fileSystemRoot, url, "GET", null);
             try {
                 int responseCode = connection.getResponseCode();
@@ -118,7 +125,7 @@ class S3Walker extends AbstractRemoteWalker {
                         }
                         return "";
                     });
-                    throw new IOException(url.toString() + ": response code " + responseCode + ": " + connection.getResponseMessage());
+                    throw new IOException(url + ": response code " + responseCode + ": " + connection.getResponseMessage());
                 }
             } finally {
                 connection.disconnect();
@@ -132,19 +139,13 @@ class S3Walker extends AbstractRemoteWalker {
         return items;
     }
 
-    protected URL getDirectoryURL(VFSPath dir) throws IOException {
-        String dirPath = dir.toString();
-        String s3Prefix = buildPrefix(dirPath + (dirPath.endsWith("/") ? "" : "/"));
-        return new URL(buildS3URL(s3Prefix, ""));
-    }
-
     private String buildPrefix(String prefix) {
         prefix = prefix.replace(this.root, "");
         prefix = prefix.replaceAll("^/", "");
         return prefix;
     }
 
-    private String buildS3URL(String prefix, String nextContinuationToken) throws IOException {
+    private String buildS3URL(String prefix, String nextContinuationToken) {
         String currentBucket = this.bucket;
         currentBucket = (currentBucket != null && !currentBucket.isEmpty()) ? currentBucket + this.delimiter : "";
         StringBuilder paramBase = new StringBuilder();
@@ -153,7 +154,7 @@ class S3Walker extends AbstractRemoteWalker {
         StringBuilder params = new StringBuilder(paramBase);
         addParam(params, "marker", nextContinuationToken);
         String s3URL = this.address + (this.address.endsWith(this.delimiter) ? "" : this.delimiter) + currentBucket;
-        if (params.length() > 0) {
+        if (!params.isEmpty()) {
             s3URL += "?" + params;
         }
         return s3URL;
