@@ -17,6 +17,9 @@ import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
 import java.util.List;
@@ -27,12 +30,12 @@ import java.util.logging.Logger;
  *
  * @author Adrian Drăghici
  */
-class SwiftWalker extends AbstractRemoteWalker {
+public class SwiftWalker extends AbstractRemoteWalker {
 
-    private String address;
-    private String container;
-    private String delimiter;
-    private String root;
+    private final String address;
+    private final String container;
+    private final String delimiter;
+    private final String root;
 
     /**
      * Creates the new walker for OpenStack Swift  VFS
@@ -58,16 +61,15 @@ class SwiftWalker extends AbstractRemoteWalker {
      * @param params The request parameters builder
      * @param name   The name of new request parameter
      * @param value  The value of new request parameter
-     * @throws IOException If an I/O error occurs
      */
-    private static void addParam(StringBuilder params, String name, String value) throws IOException {
+    private static void addParam(StringBuilder params, String name, String value) {
         if (value == null || value.isEmpty()) {
             return;
         }
-        if (params.length() > 0) {
+        if (!params.isEmpty()) {
             params.append("&");
         }
-        params.append(name).append("=").append(URLEncoder.encode(value, "UTF8"));
+        params.append(name).append("=").append(URLEncoder.encode(value, StandardCharsets.UTF_8));
     }
 
     /**
@@ -88,7 +90,12 @@ class SwiftWalker extends AbstractRemoteWalker {
         do {
             handler = new SwiftResponseHandler(this.root + this.delimiter + swiftPrefix, items, this.delimiter);
             String swiftURL = buildSwiftURL(swiftPrefix, marker);
-            URL url = new URL(swiftURL);
+            final URL url;
+            try {
+                url = new URI(swiftURL).toURL();
+            } catch (URISyntaxException e) {
+                throw new IOException(e);
+            }
             HttpURLConnection connection = this.remoteConnectionBuilder.buildConnection(fileSystemRoot, url, "GET", null);
             try {
                 int responseCode = connection.getResponseCode();
@@ -116,7 +123,7 @@ class SwiftWalker extends AbstractRemoteWalker {
                         }
                         return "";
                     });
-                    throw new IOException(url.toString() + ": response code " + responseCode + ": " + connection.getResponseMessage());
+                    throw new IOException(url + ": response code " + responseCode + ": " + connection.getResponseMessage());
                 }
             } finally {
                 connection.disconnect();
@@ -132,7 +139,7 @@ class SwiftWalker extends AbstractRemoteWalker {
         return prefix;
     }
 
-    private String buildSwiftURL(String prefix, String marker) throws IOException {
+    private String buildSwiftURL(String prefix, String marker) {
         String currentContainer = this.container;
         currentContainer = (currentContainer != null && !currentContainer.isEmpty()) ? currentContainer + this.delimiter : "";
         StringBuilder paramBase = new StringBuilder();
@@ -143,7 +150,7 @@ class SwiftWalker extends AbstractRemoteWalker {
         StringBuilder params = new StringBuilder(paramBase);
         addParam(params, "marker", marker);
         String swiftURL = this.address + (this.address.endsWith(this.delimiter) ? "" : this.delimiter) + currentContainer;
-        if (params.length() > 0) {
+        if (!params.isEmpty()) {
             swiftURL += "?" + params;
         }
         return swiftURL;
